# portfolio

./: .gitignore  Makefile  docker-compose.test.yaml  docker-compose.yaml  mongo-init.sh
backend/: .env.example  Dockerfile  Dockerfile.test  README.md  pyproject.toml  requirements.txt
backend/app/: .env.template  .env.test  main.py
backend/app/actions/: create_superuser.py
backend/app/alembic/: README
backend/app/alembic/versions/: 2024_07_22_2306-e5b3c15ec8f7_create_users_table.py  2024_07_23_0000-0820e3f09f10_create_access_tokens_table.py
backend/app/api/api_v1/: __init__.py  auth.py  experience.py  fastapi_users.py  file.py
backend/app/api/dependencies/: access_tokens.py  fastapi_users.py  strategy.py  user_manager.py
backend/app/api/dependencies/authentication/: users.py
backend/app/core/: config.py
backend/app/core/authentication/: transport.py  user_manager.py
backend/app/core/models/: __init__.py  access_token.py  base.py  db_helper.py  experience.py  mongo_helper.py  user.py
backend/app/core/schemas/: experience.py
backend/app/core/types/: experience_id.py
backend/app/services/: experience.py  users.py
backend/app/utils/: __init__.py  env_helper.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: .env.template
frontend/src/app/: page.tsx
nginx/: nginx.proxy.conf  proxy.Dockerfile
