[tool.poetry]
name = "portfolio-backend"
version = "0.1.0"
description = "portfolio backend fast api"
authors = ["Vitalii"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.1"
uvicorn = "0.30.1"
pydantic = "2.8.2"
envparse = "0.2.0"
motor = "3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
