[tool.poetry]
name = "portfolio-backend"
version = "0.1.0"
description = "portfolio backend fast api"
authors = ["Vitalii"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.111.1"
uvicorn = "0.30.1"
envparse = "0.2.0"
motor = "3.5.1"
pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
