[tool.poetry]
name = "portfolio-backend"
version = "0.1.0"
description = "portfolio backend fast api"
authors = ["Vitalii"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.112.0"
uvicorn = "0.30.6"
envparse = "0.2.0"
motor = {extras = ["srv"], version = "^3.5.1"}
pydentic = {extras = ["email"], version = "^0.0.1.dev3"}
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
odmantic = "^1.0.2"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
